--- a/notebooks/aufgabe_2.ipynb
+++ b/notebooks/aufgabe_2.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:03.623947Z",
-     "start_time": "2024-06-07T15:15:02.525041Z"
+     "end_time": "2024-06-07T21:03:26.259646Z",
+     "start_time": "2024-06-07T21:03:24.832592Z"
     }
    },
    "cell_type": "code",
@@ -19,23 +19,17 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: networkx in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (3.3)\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.2.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.0\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n",
-      "Requirement already satisfied: pygraphviz in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (1.13)\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.2.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.0\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n"
+      "Requirement already satisfied: pygraphviz in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (1.13)\r\n"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:03.627988Z",
-     "start_time": "2024-06-07T15:15:03.625388Z"
+     "end_time": "2024-06-07T21:03:26.344294Z",
+     "start_time": "2024-06-07T21:03:26.260815Z"
     }
    },
    "cell_type": "code",
@@ -54,7 +48,7 @@
    ],
    "id": "48791dd78cacdb1d",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -73,8 +67,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:04.007621Z",
-     "start_time": "2024-06-07T15:15:03.628539Z"
+     "end_time": "2024-06-07T21:03:26.795604Z",
+     "start_time": "2024-06-07T21:03:26.344811Z"
     }
    },
    "source": [
@@ -119,7 +113,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -130,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:04.345838Z",
-     "start_time": "2024-06-07T15:15:04.008147Z"
+     "end_time": "2024-06-07T21:03:27.159225Z",
+     "start_time": "2024-06-07T21:03:26.796270Z"
     }
    },
    "cell_type": "code",
@@ -206,13 +200,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:04.515397Z",
-     "start_time": "2024-06-07T15:15:04.347255Z"
+     "end_time": "2024-06-07T21:03:27.346869Z",
+     "start_time": "2024-06-07T21:03:27.160506Z"
     }
    },
    "cell_type": "code",
@@ -245,20 +239,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 20
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T15:15:04.517143Z",
-     "start_time": "2024-06-07T15:15:04.515931Z"
+     "end_time": "2024-06-07T21:03:27.348734Z",
+     "start_time": "2024-06-07T21:03:27.347458Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "384aa61bdd36badf",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 5
   }
  ],
  "metadata": {
