--- a/main.tex
+++ b/main.tex
@@ -396,7 +396,77 @@ G.add_weighted_edges_from([
         \label{fig:a06_graph}
     \end{figure}
 
+    \section{Lösung}
 
+    \begin{minted}[
+        frame=lines,
+        framesep=2mm,
+        baselinestretch=1.2,
+        bgcolor=LightGray,
+        linenos,
+        breaklines
+    ]{python}
+def create_transition_matrix(G, d=0.75):
+    N = len(G.nodes)
+    A = nx.adjacency_matrix(G, nodelist=sorted(G.nodes)).todense()
+    A = np.array(A, dtype=float)
+    out_degree = np.sum(A, axis=1)
+
+    # Avoid division by zero by setting 1 where out_degree is 0
+    out_degree[out_degree == 0] = 1
+    M = A / out_degree
+
+    # Calculate the Google matrix with damping factor
+    G_matrix = d * M + (1 - d) / N * np.ones((N, N))
+
+    return G_matrix, M
+
+def pagerank(G, d=0.75, iterations=3):
+    N = len(G.nodes)
+    G_matrix, M = create_transition_matrix(G, d)
+
+    # Initial vector R_0
+    R = np.ones(N) / N
+
+    R_list = [R]
+    for _ in range(iterations):
+        R = np.dot(G_matrix, R)
+        R_list.append(R)
+
+    return R_list, G_matrix, M
+    \end{minted}
+
+    \begin{minted}[
+        frame=lines,
+        framesep=2mm,
+        baselinestretch=1.2,
+        bgcolor=LightGray,
+        linenos,
+        breaklines
+    ]{text}
+R_0 = [0.2 0.2 0.2 0.2 0.2]
+R_1 = [0.425 0.25  0.05  0.05  0.1  ]
+R_2 = [0.2125  0.1875  0.04375 0.04375 0.15   ]
+R_3 = [0.1678125 0.1178125 0.031875  0.031875  0.085    ]
+
+Google Matrix G (with damping factor d=0.75):
+ [
+ [0.05  0.425 0.8   0.8   0.05 ]
+ [0.3   0.05  0.8   0.05  0.05 ]
+ [0.05  0.05  0.05  0.05  0.05 ]
+ [0.05  0.05  0.05  0.05  0.05 ]
+ [0.3   0.05  0.05  0.05  0.05 ]
+ ]
+
+Transition Matrix M:
+ [
+ [0.         0.5        1.         1.         0.        ]
+ [0.33333333 0.         1.         0.         0.        ]
+ [0.         0.         0.         0.         0.        ]
+ [0.         0.         0.         0.         0.        ]
+ [0.33333333 0.         0.         0.         0.        ]
+ ]
+    \end{minted}
 
 
     \newpage
