--- a/main.tex
+++ b/main.tex
@@ -493,6 +493,33 @@ Transition Matrix M:
         \label{fig:a07_graph}
     \end{figure}
 
+    \section{Lösung}
+
+    \begin{figure}[htbp]
+        \centering
+        \begin{subfigure}[b]{0.49\textwidth}
+            \begin{minted}[
+            frame=lines,
+            framesep=2mm,
+            baselinestretch=1.2,
+            bgcolor=LightGray,
+            linenos,
+            breaklines
+            ]{text}
+Probability to stay in sink i.e. for Aurora to get stick in a bed:
+Katzenbett (Schlafzimmer): 1.01%
+Katzenbett (Büro): 1.03%
+Katzenbett (Wohnzimmer): 0.94%
+        \end{minted}
+            \label{fig:a07_output}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.49\textwidth}
+            \includegraphics[height=8cm]{a07a_probability}
+            \label{fig:a07_plot}
+        \end{subfigure}
+        \label{fig:a07_solution}
+    \end{figure}
+
 
     \newpage
 
