--- a/notebooks/aufgabe_3.ipynb
+++ b/notebooks/aufgabe_3.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:34.917944Z",
-     "start_time": "2024-06-07T21:03:33.698884Z"
+     "end_time": "2024-06-07T22:40:19.925747Z",
+     "start_time": "2024-06-07T22:40:18.707408Z"
     }
    },
    "cell_type": "code",
@@ -28,19 +28,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:35.000488Z",
-     "start_time": "2024-06-07T21:03:34.919195Z"
+     "end_time": "2024-06-07T22:40:20.010712Z",
+     "start_time": "2024-06-07T22:40:19.926926Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import os\n",
-    "import random\n",
-    "import heapq\n",
-    "from itertools import combinations\n",
+    "\n",
     "import networkx as nx\n",
-    "from networkx.drawing.nx_agraph import to_agraph\n",
     "from IPython.core.display import Image\n",
+    "from networkx.drawing.nx_agraph import to_agraph\n",
     "\n",
     "basepath = os.path.join('..', 'images')\n",
     "if not os.path.exists(basepath):\n",
@@ -69,8 +67,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:35.371021Z",
-     "start_time": "2024-06-07T21:03:35.001083Z"
+     "end_time": "2024-06-07T22:40:20.371292Z",
+     "start_time": "2024-06-07T22:40:20.011255Z"
     }
    },
    "source": [
@@ -114,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:35.613460Z",
-     "start_time": "2024-06-07T21:03:35.371633Z"
+     "end_time": "2024-06-07T22:40:20.619430Z",
+     "start_time": "2024-06-07T22:40:20.372271Z"
     }
    },
    "cell_type": "code",
@@ -158,7 +156,7 @@
    "outputs": [
     {
      "ename": "NodeNotFound",
-     "evalue": "Either source c or target f is not in G",
+     "evalue": "Either source b or target c is not in G",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
@@ -178,7 +176,7 @@
       "File \u001B[0;32m<class 'networkx.utils.decorators.argmap'> compilation 29:3\u001B[0m, in \u001B[0;36margmap_bidirectional_shortest_path_26\u001B[0;34m(G, source, target, backend, **backend_kwargs)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mbz2\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mcollections\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mgzip\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01minspect\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mitertools\u001B[39;00m\n",
       "File \u001B[0;32m~/ws/AMS4-UE03/venv/lib/python3.12/site-packages/networkx/utils/backends.py:633\u001B[0m, in \u001B[0;36m_dispatchable.__call__\u001B[0;34m(self, backend, *args, **kwargs)\u001B[0m\n\u001B[1;32m    628\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Returns the result of the original function, or the backend function if\u001B[39;00m\n\u001B[1;32m    629\u001B[0m \u001B[38;5;124;03mthe backend is specified and that backend implements `func`.\"\"\"\u001B[39;00m\n\u001B[1;32m    631\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m backends:\n\u001B[1;32m    632\u001B[0m     \u001B[38;5;66;03m# Fast path if no backends are installed\u001B[39;00m\n\u001B[0;32m--> 633\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43morig_func\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    635\u001B[0m \u001B[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001B[39;00m\n\u001B[1;32m    636\u001B[0m backend_name \u001B[38;5;241m=\u001B[39m backend\n",
       "File \u001B[0;32m~/ws/AMS4-UE03/venv/lib/python3.12/site-packages/networkx/algorithms/shortest_paths/unweighted.py:244\u001B[0m, in \u001B[0;36mbidirectional_shortest_path\u001B[0;34m(G, source, target)\u001B[0m\n\u001B[1;32m    242\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m source \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m G \u001B[38;5;129;01mor\u001B[39;00m target \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m G:\n\u001B[1;32m    243\u001B[0m     msg \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEither source \u001B[39m\u001B[38;5;132;01m{\u001B[39;00msource\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m or target \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtarget\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m is not in G\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m--> 244\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m nx\u001B[38;5;241m.\u001B[39mNodeNotFound(msg)\n\u001B[1;32m    246\u001B[0m \u001B[38;5;66;03m# call helper to do the real work\u001B[39;00m\n\u001B[1;32m    247\u001B[0m results \u001B[38;5;241m=\u001B[39m _bidirectional_pred_succ(G, source, target)\n",
-      "\u001B[0;31mNodeNotFound\u001B[0m: Either source c or target f is not in G"
+      "\u001B[0;31mNodeNotFound\u001B[0m: Either source b or target c is not in G"
      ]
     }
    ],
