--- a/notebooks/aufgabe_1.ipynb
+++ b/notebooks/aufgabe_1.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:10.417494Z",
-     "start_time": "2024-06-07T21:03:09.164368Z"
+     "end_time": "2024-06-07T22:40:02.753060Z",
+     "start_time": "2024-06-07T22:40:01.419791Z"
     }
    },
    "cell_type": "code",
@@ -19,13 +19,7 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: networkx in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (3.3)\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.2.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.0\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n",
-      "Requirement already satisfied: pygraphviz in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (1.13)\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.2.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.0\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n"
+      "Requirement already satisfied: pygraphviz in /Users/astral/ws/AMS4-UE03/venv/lib/python3.12/site-packages (1.13)\r\n"
      ]
     }
    ],
@@ -34,19 +28,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:10.499083Z",
-     "start_time": "2024-06-07T21:03:10.418526Z"
+     "end_time": "2024-06-07T22:40:02.850996Z",
+     "start_time": "2024-06-07T22:40:02.754358Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "import random\n",
     "import heapq\n",
+    "import os\n",
     "from typing import Any\n",
+    "\n",
     "import networkx as nx\n",
-    "from networkx.drawing.nx_agraph import to_agraph\n",
     "from IPython.core.display import Image\n",
+    "from networkx.drawing.nx_agraph import to_agraph\n",
     "\n",
     "basepath = os.path.join('..', 'images')\n",
     "if not os.path.exists(basepath):\n",
@@ -73,8 +67,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:10.898976Z",
-     "start_time": "2024-06-07T21:03:10.500195Z"
+     "end_time": "2024-06-07T22:40:03.245068Z",
+     "start_time": "2024-06-07T22:40:02.851498Z"
     }
    },
    "source": [
@@ -124,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:11.261087Z",
-     "start_time": "2024-06-07T21:03:10.899576Z"
+     "end_time": "2024-06-07T22:40:03.604890Z",
+     "start_time": "2024-06-07T22:40:03.246025Z"
     }
    },
    "cell_type": "code",
@@ -199,8 +193,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:11.452306Z",
-     "start_time": "2024-06-07T21:03:11.262439Z"
+     "end_time": "2024-06-07T22:40:03.772041Z",
+     "start_time": "2024-06-07T22:40:03.605462Z"
     }
    },
    "cell_type": "code",
@@ -238,8 +232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T21:03:11.454492Z",
-     "start_time": "2024-06-07T21:03:11.452924Z"
+     "end_time": "2024-06-07T22:40:03.773684Z",
+     "start_time": "2024-06-07T22:40:03.772579Z"
     }
    },
    "cell_type": "code",
