change graphicspath folder

--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@
   \titlespacing*{\chapter}{0pt}{*4}{*2.5}
 
 % Graphics path
-\graphicspath{ {./images/} }
+\graphicspath{ {images/} }
 
 % Cover page
 \newcommand{\coverpage}{
