--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
     \thispagestyle{cover}
     \pagenumbering{roman} % Start Roman numbering for the cover page
     \begin{center}
-        {\includegraphics[height=3cm]{fh-logo}}\\[1cm]
+        {\includegraphics[height=3cm]{fh-logo.png}}\\[1cm]
         {\LARGE \thetitle}\\[0.5cm]
         {\large \theauthor}\\
     \end{center}
@@ -77,7 +77,7 @@
     \definecolor{LightGray}{gray}{0.9}
     \definecolor{DarkGray}{gray}{0.3}
 
-    \title{AMS~-~UE}
+    \title{AMS04~-~UE03}
     \coverpage
 
     \clearpage
